--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
                 <p align="right"><a href="#">інші...</a></p>
             </ul>
             </font>
-            
+
         </td>
         <td width="70%">(Текст сайта)</td>
     </tr>
     <tr>
-        <td colspan="2" valign="middle" height="90">(Низ сайта)</td>
+        <td colspan="2" valign="middle" height="90">
+            <font size="4">Сайт розробила "Огороднічук Юлія"</font>
+        </td>
     </tr>
 </table>
-   
-
 </body>
 </html>
