18 - JS-Добавити годинник

--- a/index.html
+++ b/index.html
@@ -2,7 +2,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Сайт web-студії "Web-DECO"</title>
+    <script src="js/clock.js"></script>
    
+    <script type="text/javascript">
+        function send()
+        {
+            var valid = true;
+            var elems = document.forms[0].elements;
+            for(var i=0; i<document.forms[0].length; i++)
+            {
+                if( elems[i].getAttribute('type') == 'text' ||
+                    elems[i].getAttribute('type') == 'password' ||
+                    elems[i].getAttribute('type') == 'emal')
+                     {
+                        if(elems[i].value == '')
+                         {
+                            elems[i].style.border = '2px solid red';
+                            valid = false;
+                        }
+                    }            
+            }
+            if(!valid)
+             {
+                alert('Заповніть всі поля !!!');
+                return false;
+            }
+        }
+    
+        </script>
+
+
     <style>
     .shadowtext {
         text-shadow: 1px 3px 2px white, 0 0 1em red;
@@ -49,7 +78,7 @@
             </font>
             <hr>
                  <h1 align="center"><font color="green">Реєстрація</font></h1>  
-                 <form action="forma.php" method="post" onsubmit="return send();">
+                 <!-- <form action="forma.php" method="post" onsubmit="return send();"> -->
                     <table align="center" bgcolor="#ccc">
                      <tr>
                          <td><font color="green">Прізвище</font>: </td>
