--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </font>
             <hr>
                  <h1 align="center"><font color="green">Реєстрація</font></h1>  
-                 <!-- <form action="forma.php" method="post" onsubmit="return send();"> -->
+                 <form action="forma.php" method="post" onsubmit="return send();">
                     <table align="center" bgcolor="#ccc">
                      <tr>
                          <td><font color="green">Прізвище</font>: </td>
